--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sarangnambiar.github.io",
   "version": "0.1.0",
-  "homepage": "https://sarang-nambiar.github.io/react-gh-pages",
+  "homepage": "https://sarang-nambiar.github.io/portfolio-react-website",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -16,9 +16,9 @@
     "bootstrap": "^5.3.1",
     "html-react-parser": "^4.2.2",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.5",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "tailwindcss": "^3.3.3"
   }
 }
